<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_control"
        android:icon="@drawable/ic_tab_control"
        android:title="@string/tab_control" />
    <item
        android:id="@+id/nav_partitions"
        android:icon="@drawable/ic_tab_partitions"
        android:title="@string/tab_partitions" />
    <item
        android:id="@+id/nav_logs"
        android:icon="@drawable/ic_tab_logs"
        android:title="@string/tab_logs" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_tab_settings"
        android:title="@string/tab_settings" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_tab_about"
        android:title="@string/tab_about" />
</menu>
